24 March 2009: Wouter
	- more neat configure.ac. Removed duplicate config.h includes.
	- neater config.h.in.
	- iana portlist updated.
	- fix util/configlexer.c and solaris -std=c99 flag.
	- fix postcommit aclocal errors.
	- spaces stripped. Makefile cleaner, /usr omitted from -I, -L, -R.

23 March 2009: Wouter
	- added launchd plist example file for MacOSX to contrib.
	- deprecation test for daemon(3).
	- moved common configure actions to m4 include, prettier Makefile.

20 March 2009: Wouter
	- bug #239: module-config entries order is important. Documented.
	- build fix for test asynclook.

19 March 2009: Wouter
	- winrc/README.txt dos-format text file.
	- iana portlist updated.
	- use _beginthreadex() when available (performs stack alignment).
	- defaults for windows baked into configure.ac (used if on mingw).

18 March 2009: Wouter
	- Added tests, unknown algorithms become insecure. fallback works.
	- Fix for and test for unknown algorithms in a trust anchor
	  definition.  Trust anchors with no supported algos are ignored.
	  This means a (higher)DS or DLV entry for them could succeed, and
	  otherwise they are treated as insecure.
	- domain-insecure: "example.com" statement added. Sets domain
	  insecure regardless of chain of trust DSs or DLVs. The inverse
	  of a trust-anchor.

17 March 2009: Wouter
	- unit test for unsupported algorithm in anchor warning.
	- fixed so queries do not fail on opportunistic target queries.

16 March 2009: Wouter
	- fixup diff error printout in contrib/update-itar.sh.
	- added contrib/unbound_cacti for statistics support in cacti,
	  contributed by Dmitriy Demidov.

13 March 2009: Wouter
	- doxygen and lex/yacc on linux.
	- strip update-anchor on makedist -w.
	- fix testbound on windows.
	- default log to syslog for windows.
	- uninstaller can stop unbound - changed text on it to reflect that.
	- remove debugging from windows 'cron' actions.

12 March 2009: Wouter
	- log to App.logs on windows prints executable identity.