@@ -5,6 +5,7 @@
 	- fix util/configlexer.c and solaris -std=c99 flag.
 	- fix postcommit aclocal errors.
 	- spaces stripped. Makefile cleaner, /usr omitted from -I, -L, -R.
+	- swap order of host detect and libtool generation.
 
 23 March 2009: Wouter
 	- added launchd plist example file for MacOSX to contrib.
